--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,7 @@
-#:::::::: NOMBRE DEL MICROSERVICIO :::::::::
-spring.application.name=Spring-Boot_CRUD2
-
-#:::::::: PUERTO :::::::::
-server.port=8080
 
 #:::::::: DATASOURCE MYSQL ::::::::::
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.initialize=false
+spring.jpa.hibernate.dll-auto=create
 spring.datasource.url=jdbc:mysql://localhost:3307/demo
 spring.datasource.username=root
 spring.datasource.password=123456
-
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
-logging.level.org.hibernate.SQL=debug
