--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #:::::::: DATASOURCE MYSQL ::::::::::
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3307/demo
 spring.datasource.username=root
 spring.datasource.password=123456
-spring.datasource.initialize=false
-spring.jpa.hibernate.dll-auto=create
