Cambios en application.properties y al pom.xml

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#:::::::: PORT CONNECT ::::::::::
+server.port=8080
 #:::::::: DATASOURCE MYSQL ::::::::::
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
