--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=8080
 #:::::::: DATASOURCE MYSQL ::::::::::
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3307/demo
+spring.datasource.url=jdbc:mysql://localhost:3307/demo?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=123456
